# stacy

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.sh
.github/workflows/: stacy.yml  test.yml
docs/contribution_guidelines/: contribute.md
docs/guidelines/: contribute.md
docs/vulnerabilities/: 1-assert-block-height.md  10-unused-arguments.md  11-unused-let-variables.md  2-call-inside-as-contract.md  3-divide-before-multiply.md  4-private-function-not-used.md  5-todo-comment.md  5-tx-sender-in-assert.md  6-tx-sender-in-assert.md  6-unwrap-panic-usage.md  7-unwrap-panic-usage.md  7-var-could-be-constant.md  8-var-could-be-constant.md  9-updated-functions.md
src/stacks_analyzer/: __init__.py  __main__.py  analyzer.py  print_message.py  visitor.py
src/stacks_analyzer/detectors/: AssertBlockHeight.py  CallInsideAsContract.py  DivideBeforeMultiply.py  PrivateFunctionNotUsed.py  ToDoComment.py  (+4 more)
src/stacy_analyzer/: __init__.py  __main__.py  analyzer.py  linter_runner.py  node_iterator.py  print_message.py  visitor.py
stacks_analyzer/: print_message.py  stacks_analyzer.py  visitor.py
stacks_analyzer/detectors/: ArgumentsNotUsed.py  AssertBlockHeight.py  CallInsideAsContract.py  DivideBeforeMultiply.py  ExcludeHardcodedPrincipals.py  KnownPrincipals.py  PrivateFunctionNotUsed.py  ToDoComment.py  TxSenderInAssert.py  UnwrapPanicUsage.py  UpdatedFunctionsDetector.py  VarCouldBeConstant.py
templates/detector/: DetectorName.py
tests/: magic_comment.clar  test_module1.py
(+74 files in other folders)
